--- a/deployment.yml
+++ b/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: tetris
-        image: rajinikanthvadla/dockerchappie:latest
+        image: srilalithac/dockerdemo:latest
         ports:
         - containerPort: 3000   # Use port 3000
 
